infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: ingress
  name: collector-ingress
  namespace: collector
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: collector.local
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/()(articles(/|$)(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: article-service
                port:
                  number: 3001
          - path: /api/()(users(/|$)(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3002
          - path: /api/()(payments(/|$)(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 3003
          - path: /api/()(fraud(/|$)(.*))
            pathType: ImplementationSpecific
            backend:
              service:
                name: fraud-detection-service
                port:
                  number: 3004
          - path: /()(jaeger(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
          - path: /()(grafana(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /()(rabbitmq(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
